--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,10 +13,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
+p, h1, h2, h3, h4, h5, h6, ul, li {
   padding: 0;
   margin: 0;
 }
+
+a {
+  text-decoration: none;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
